# drg2sbg

./: .gitignore  AUTHORS  ChangeLog  GIT-VERSION-GEN  Makefile.am  README  configure.ac
doc/: Makefile.am  drg2sbg.man  drgbuilder.man
src/: .gitignore  Makefile.am  base64.c  base64.h  drgbuilder.c  drgdata.c  drgdata.h  drgtosbg.c
