## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = .


bin_PROGRAMS = drg2sbg drgbuilder
drg2sbg_SOURCES = drgdata.h \
                  drgdata.c \
                  drgtosbg.c \
                  base64.h \
                  base64.c

drgbuilder_SOURCES = drgdata.h \
                     drgdata.c \
                     base64.h \
                     base64.c \
                     drgbuilder.c
